Fix path to variables; overflow hidden on column resize

--- a/src/themes/default/assets/foot.scss
+++ b/src/themes/default/assets/foot.scss
@@ -13,6 +13,7 @@
 
 					vertical-align: middle;
 					text-align: left;
+					overflow: hidden;
 
 					> * {
 						vertical-align: middle;
