--- a/src/themes/default/assets/head.scss
+++ b/src/themes/default/assets/head.scss
@@ -13,6 +13,7 @@
 				text-align: left;
 				padding: 0 12px;
 				position: relative;
+				overflow: hidden;
 
 				&:hover{
 					label {
@@ -22,6 +23,30 @@
 
 				> * {
 					vertical-align: middle;
+				}
+
+				&.email {
+					width: 180px;
+				}
+
+				&.password {
+					width: 60px;
+				}
+
+				&.bool {
+					width: 55px;
+				}
+
+				&.date {
+					width: 80px;
+				}
+
+				&.number {
+					width: 60px;
+				}
+
+				&.array {
+					width: 200px;
 				}
 			}
 
