--- a/src/themes/material/assets/body.scss
+++ b/src/themes/material/assets/body.scss
@@ -20,6 +20,7 @@ $row-height: 48px;
 
 					vertical-align: middle;
 					text-align: left;
+					overflow: hidden;
 
 					> * {
 						vertical-align: middle;
